<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_label"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelForCostOfService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cost"
        android:labelFor="@id/costOfService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/labelTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/labelForTip"
        android:labelFor="@id/costOfService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tipAmount"
        />

    <EditText
        android:id="@+id/costOfService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        android:hint="@string/defaultVal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelForCostOfService"
        android:importantForAutofill="no"
        android:autofillHints="no" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:onClick="calculateFive"
        app:layout_constraintEnd_toStartOf="@id/button_seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costOfService" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:onClick="calculateSeven"
        app:layout_constraintEnd_toStartOf="@id/button_ten"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/costOfService" />

    <Button
        android:id="@+id/button_ten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ten"
        android:onClick="calculateTen"
        app:layout_constraintEnd_toStartOf="@id/button_fifteen"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toBottomOf="@+id/costOfService" />

    <Button
        android:id="@+id/button_fifteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fifteen"
        android:onClick="calculateFifteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_ten"
        app:layout_constraintTop_toBottomOf="@+id/costOfService" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/defaultVal"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>